# py-project-fastapi

./: .coverage  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  how-to-guides.html  main.py  mkdocs.yml  pyproject.toml  reference.html  release.toml
.github/workflows/: build.yml  lint.yml  pages.yml  release.yml  test.yml
docs/: index.md  openapi.json  reference.md
search/: search_index.json
site/: 404.html  explanation.html  how-to-guides.html  index.html  objects.inv  reference.html  tutorials.html
site/search/: search_index.json
src/example_app/: __init__.py  app.py
tests/: test_app.py
