[tool.poetry]
name = "example_app"
version = "0.1.0"
description = ""
authors = ["myself659-ai <myself659@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/myself659/py-project-fastapi"
repository = "https://github.com/myself659/py-project-fastapi"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.11.0"


[tool.poetry.group.test.dependencies]
respx = "^0.21.1"
pytest-asyncio = "^0.23.8"
trio = "^0.26.0"
pytest-cov = "^5.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"


[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.9"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tsst"]
addopts = "-p no:cacheprovider" # deactivating pytest caching.


[tool.coverage.report]
exclude_lines = [
    'if __name__ == "__main__":'
]
